# visa_atlas

./: .gitignore  .ruff.toml  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: __init__.py  charts.py  data_loader.py  filters.py  queries.py  utils.py
tools/: xlsx_to_parquet.py
